Fix race condition in Free Monitoring when free monitoring document is deleted

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Security 2020-11-02, Security 2020-11-16
    • 5
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In a replica set, when the config document for free monitoring in admin.system.version is deleted, the deletion is replicated to the secondary. If the secondary sees the deletion between sending metrics to monitoring service and waiting for the reply, the secondary gets into the wrong state.

      The metrics completion message should be ignored in this situation. Currently, it is processed as if the deletion did not occur.

            Assignee:
            Mark Benvenuto
            Reporter:
            Mark Benvenuto
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: