SERVER-51679 Fix race condition in Free Monitoring when free monitoring document is deleted