src/mongo/db/free_mon/free_mon_processor.h
@@ -325,6 +325,11 @@ public:
     void turnCrankForTest(size_t countMessagesToIgnore);
 
     /**
+     * Deproritize the first message to force interleavings of messages.
+     */
+    void deprioritizeFirstMessageForTest(FreeMonMessageType type);
+
+    /**
      * Processes messages forever
      */
     void run();
